add different profiles

--- a/springboot/src/main/resources/templates/index.mustache
+++ b/springboot/src/main/resources/templates/index.mustache
@@ -1,8 +1,6 @@
-<h1>Greetings Learning Spring Boot 3.0 fans!</h1>
-<p>
-    In this chapter, we are learning how to make
-    a web app using Spring Boot 3.0
-</p>
+<h1>{{header}}</h1>
+
+<p>{{intro}}</p>
 
 <h3>User profile</h3>
 <ul>
@@ -32,6 +30,10 @@
 
     <button type="submit">Search</button>
 </form>
+
+{{#search}}
+    Searching: {{value}}
+{{/search}}
 
 <ul>
     {{#videos}}
