--- a/springboot/src/main/resources/templates/index.mustache
+++ b/springboot/src/main/resources/templates/index.mustache
@@ -1,6 +1,10 @@
-<h1>{{header}}</h1>
+<h1>
+Greeting Learning Spring Boot 3.0 fans!
+</h1>
 
-<p>{{intro}}</p>
+<p>
+In this chapter, we are learning how to make a web app using Spring Boot 3.0
+</p>
 
 <h3>User profile</h3>
 <ul>
